--- a/Control_asistencia_mvc/Views/Shared/_Layout.cshtml
+++ b/Control_asistencia_mvc/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
+    <title>@ViewBag.Title - Control de Asistencia-MVC</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -17,11 +17,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nombre de aplicación", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Control de Asistencia", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Cargos", "Index", "Cargo")</li>
+                    <li>@Html.ActionLink("Control de Asistencia", "Index", "ControlAsistencia")</li>
+                    <li>@Html.ActionLink("Departamentos", "Index", "Departamento")</li>
+                    <li>@Html.ActionLink("Empleados", "Index", "Empleado")</li>
+                    <li>@Html.ActionLink("Tipo de Empleado", "Index", "TipoEmpleado")</li>
+                    <li>@Html.ActionLink("Turnos", "Index", "Turno")</li>
                     <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
                 </ul>
@@ -32,7 +38,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Mi aplicación ASP.NET</p>
+            <p>&copy; @DateTime.Now.Year - Mi aplicación ASP.NET- Control de Asistencia</p>
         </footer>
     </div>
 
